функциональность пагинаций и resultheader

--- a/fitness_club_front/Components/App.razor
+++ b/fitness_club_front/Components/App.razor
@@ -13,7 +13,7 @@
 
 <body>
     <Routes />
-    <script src="_framework/blazor.web.js"></script>
+    <script src="_framework/blazor.server.js"></script>
 </body>
 
 </html>
